# DataAnalysis_Project

./: gpt4o_mini_all.csv  gpt4o_mini_closest.csv  gpt4o_mini_furthest.csv  gpt4o_mini_random.csv  label_embeddings_rubert.csv  main.ipynb  project.html  pyproject.toml  score_model.py
