[project]
name = "data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "langchain-openai>=0.3.16",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "pydantic>=2.11.4",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "transformers>=4.51.3",
]
